--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #009DDC;
+  font-family: 'Indie Flower', cursive;
+  color: #FFFFFF;
+}
+
+#quote-box {
+  display: flex;
+  flex-direction: row;
+}
+
+#left-column{
+  max-width: 800px;
+  min-width: 500px;
+  padding-right: 30px;
+}
+
+#text {
+  font-size: 45px;
+}
+
+#author {
+  font-size: 35px;
+  text-align: right;
+  padding-bottom: 20px;
+}
+
+button {
+  color: #FFFFFF;
+  font-size: 25px;
+  background: none;
+  border: 5px #FFD90F solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-right: 10px;
+  font-family: 'Indie Flower', cursive;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #02aaec;
+}
+
+a{
+  text-decoration: none;
+  color: #FFFFFF;
 }
